chore(release): prepare release v1.0.0 with full i18n and pwa support